tests/local_inference_annotations/local_inference_annotations.exp
Error ---------------------------------------------------------------------------------------------------- array.js:5:16

Missing an annotation on `x`. [missing-local-annot]

   5|     const a = (x) => 3; // Missing annot
                     ^


Error --------------------------------------------------------------------------------------------------- array.js:11:18

Missing an annotation on `x`. [missing-local-annot]

   11|       const b = (x) => 3; // Missing annot
                        ^


Error --------------------------------------------------------------------------------------------------- array.js:18:18

Missing an annotation on `x`. [missing-local-annot]

   18| emptyArray.push((x) => 3); // Missing annot
                        ^


Error ------------------------------------------------------------------------------------------------ assignment.js:6:6

Cannot assign function to `y` because parameter `x` of unknown type [1] is incompatible with number [2] (consider adding
a type annotation to `x` [1]) in the first parameter. All writes to `y` must be compatible with the type of its
initializer [3]. Add an annotation to `y` [3] if a different type is desired. [incompatible-type]

   assignment.js:6:6
   6| y = (x) => 3; // No missing annot
           ^ [1]

References:
   assignment.js:5:13
   5| let y = (x: number) => 3;
                  ^^^^^^ [2]
   assignment.js:5:5
   5| let y = (x: number) => 3;
          ^ [3]


Error ----------------------------------------------------------------------------------------------- assignment.js:13:6

Missing an annotation on `x`. [missing-local-annot]

   13| c = (x) => 3; // Missing annot
            ^


Error ----------------------------------------------------------------------------------------------- assignment.js:19:6

Missing an annotation on `x`. [missing-local-annot]

   19| e = (x) => 3; // Missing annot
            ^


Error --------------------------------------------------------------------------------------------------- block.js:14:16

Missing an annotation on `y`. [missing-local-annot]

   14|     const x = (y) => 3;  // error y missing an annotation
                      ^


Error ----------------------------------------------------------------------------------------------------- call.js:9:14

Missing an annotation on `x`. [missing-local-annot]

   9|   const a = (x) => 3; // Required annot
                   ^


Error ----------------------------------------------------------------------------------------------------- call.js:12:8

Property `@@iterator` is missing in function [1] but exists in `$Iterable` [2]. [prop-missing]

   call.js:12:8
     12| }, ...((x) => 3));
                ^^^^^^^^ [1]

References:
   <BUILTINS>/core.js:1679:11
   1679| interface $Iterable<+Yield,+Return,-Next> {
                   ^^^^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- cast.js:6:15

Missing an annotation on `x`. [missing-local-annot]

   6|   const b = ((x) => 3)(3); // This x does not
                    ^


Error ----------------------------------------------------------------------------------------------------- cast.js:7:14

Missing an annotation on `x`. [missing-local-annot]

   7|   const c = (x) => 3; // Neither does this one
                   ^


Error ---------------------------------------------------------------------------------------------------- cast.js:13:15

Missing an annotation on `x`. [missing-local-annot]

   13|   const b = ((x) => 3)(3); // This x does not
                     ^


Error ---------------------------------------------------------------------------------------------------- cast.js:14:14

Missing an annotation on `x`. [missing-local-annot]

   14|   const c = (x) => 3; // Neither does this one
                    ^


Error ---------------------------------------------------------------------------------------------------- class.js:3:10

Missing an annotation on `param`. [missing-local-annot]

   3|   method(param): any { // error on param
               ^^^^^


Error ----------------------------------------------------------------------------------------------------- class.js:4:6

Missing an annotation on `x`. [missing-local-annot]

   4|     (x) => 3; // error
           ^


Error ---------------------------------------------------------------------------------------------------- class.js:8:16

Missing an annotation on `x`. [missing-local-annot]

   8|   property1 = (x) => 3; // error
                     ^


Error ---------------------------------------------------------------------------------------------------- class.js:8:18

Missing an annotation on return. [missing-local-annot]

   8|   property1 = (x) => 3; // error
                       


Error ---------------------------------------------------------------------------------------------------- class.js:19:3

Missing an annotation on property `a`. [missing-local-annot]

   19|   a; // error
         ^^


Error ---------------------------------------------------------------------------------------------------- class.js:20:3

Missing an annotation on property `b`. [missing-local-annot]

   20|   declare b; // error
         ^^^^^^^^^^


Error ---------------------------------------------------------------------------------------------------- class.js:29:8

Missing an annotation on property `prop2`. [missing-local-annot]

   29|   prop2 = 10 + 30; // err
              


Error ---------------------------------------------------------------------------------------------------- class.js:30:3

Missing an annotation on property `prop3`. [missing-local-annot]

   30|   prop3; // err
         ^^^^^^


Error --------------------------------------------------------------------------------------------------- class.js:32:22

Missing an annotation on return. [missing-local-annot]

   32|   prop5 = (x: number) => 42; // err return
                            


Error --------------------------------------------------------------------------------------------------- class.js:33:31

Missing an annotation on return. [missing-local-annot]

   33|   prop6 = function (x: number) { return 42 } // err return
                                     


Error --------------------------------------------------------------------------------------------------- class.js:36:12

Missing an annotation on return. [missing-local-annot]

   36|   method2() { return 42; } // err return
                  


Error --------------------------------------------------------------------------------------------------- class.js:37:26

Cannot return `10` because number [1] is incompatible with constructor void return [2]. [incompatible-return]

   class.js:37:26
   37|   constructor() { return 10; } // no annotation required, but error on non-void return
                                ^^ [1]

References:
   class.js:37:16
   37|   constructor() { return 10; } // no annotation required, but error on non-void return
                       [2]


Error ---------------------------------------------------------------------------------------------------- class.js:39:9

Missing an annotation on property `#priv1`. [missing-local-annot]

   39|   #priv1 = 10 + 20; // err
               


Error ---------------------------------------------------------------------------------------------------- class.js:40:3

Missing an annotation on property `#priv2`. [missing-local-annot]

   40|   #priv2; // err
         ^^^^^^^


Error --------------------------------------------------------------------------------------------------- class.js:43:12

Missing an annotation on return. [missing-local-annot]

   43|   #pmeth2() { return 42 } // err return
                  


Error ---------------------------------------------------------------------------------------------------- class.js:44:3

Computed property keys not supported. [unsupported-syntax]

   44|   ["computed"]() { } // unsupported, but no missing annot
         ^^^^^^^^^^^^^^^^^^


Error --------------------------------------------------------------------------------------------------- class.js:46:23

Missing an annotation on return. [missing-local-annot]

   46|   throwingInvariant1() { invariant() } // error: throws
                             


Error --------------------------------------------------------------------------------------------------- class.js:47:23

Missing an annotation on return. [missing-local-annot]

   47|   throwingInvariant2() { invariant(false) } // error: throws
                             


Error ----------------------------------------------------------------------------------------- class_expression.js:3:10

Missing an annotation on `param`. [missing-local-annot]

   3|   method(param): any { // error on param, annotation is not pushed down
               ^^^^^


Error ------------------------------------------------------------------------------------------ class_expression.js:4:6

Missing an annotation on `x`. [missing-local-annot]

   4|     (x) => 3; // error
           ^


Error ----------------------------------------------------------------------------------------- class_expression.js:8:16

Missing an annotation on `x`. [missing-local-annot]

   8|   property1 = (x) => 3; // error
                     ^


Error ----------------------------------------------------------------------------------------- class_expression.js:8:18

Missing an annotation on return. [missing-local-annot]

   8|   property1 = (x) => 3; // error
                       


Error --------------------------------------------------------------------------------------- destructuring_init.js:4:14

Missing an annotation on `x`. [missing-local-annot]

   4|   const d = (x) => 3;
                   ^


Error ---------------------------------------------------------------------------------------- destructuring_init.js:9:8

Property `x` is missing in statics of function type [1]. [prop-missing]

   destructuring_init.js:9:8
   9| const {x: b, y: c}: number => void = (x) => { // This x has an annot available
             ^

References:
   destructuring_init.js:9:21
   9| const {x: b, y: c}: number => void = (x) => { // This x has an annot available
                          ^^^^^^^^^^^^^^ [1]


Error --------------------------------------------------------------------------------------- destructuring_init.js:9:14

Property `y` is missing in statics of function type [1]. [prop-missing]

   destructuring_init.js:9:14
   9| const {x: b, y: c}: number => void = (x) => { // This x has an annot available
                   ^

References:
   destructuring_init.js:9:21
   9| const {x: b, y: c}: number => void = (x) => { // This x has an annot available
                          ^^^^^^^^^^^^^^ [1]


Error -------------------------------------------------------------------------------------- destructuring_init.js:10:15

Missing an annotation on `x`. [missing-local-annot]

   10|   const b = ((x) => 3)(3); // This x does not
                     ^


Error -------------------------------------------------------------------------------------- destructuring_init.js:11:14

Missing an annotation on `x`. [missing-local-annot]

   11|   const c = (x) => 3; // Neither does this one
                    ^


Error -------------------------------------------------------------------------------------- destructuring_init.js:28:14

Missing an annotation on `x`. [missing-local-annot]

   28| [null_1] = [(x) => 1]; // error needs annotation because `null_1` pattern is a provider
                    ^


Error --------------------------------------------------------------------------------------- destructuring_init.js:33:2

Cannot assign `[...][0]` to `k` because parameter `x` of unknown type [1] is incompatible with string [2] (consider
adding a type annotation to `x` [1]) in the first parameter. All writes to `k` must be compatible with the type of its
initializer [3]. Add an annotation to `k` [3] if a different type is desired. [incompatible-type]

   destructuring_init.js:33:2
   33| [k, [l, m]] = [(x) => 1, [(x) => 1, (x) => 1]]; // okay
        ^

References:
   destructuring_init.js:33:17
   33| [k, [l, m]] = [(x) => 1, [(x) => 1, (x) => 1]]; // okay
                       ^ [1]
   destructuring_init.js:30:13
   30| var k = (x: string) => 1;
                   ^^^^^^ [2]
   destructuring_init.js:30:5
   30| var k = (x: string) => 1;
           ^ [3]


Error --------------------------------------------------------------------------------------- destructuring_init.js:33:6

Cannot assign `[...][1][0]` to `l` because parameter `x` of unknown type [1] is incompatible with string [2] (consider
adding a type annotation to `x` [1]) in the first parameter. All writes to `l` must be compatible with the type of its
initializer [3]. Add an annotation to `l` [3] if a different type is desired. [incompatible-type]

   destructuring_init.js:33:6
   33| [k, [l, m]] = [(x) => 1, [(x) => 1, (x) => 1]]; // okay
            ^

References:
   destructuring_init.js:33:28
   33| [k, [l, m]] = [(x) => 1, [(x) => 1, (x) => 1]]; // okay
                                  ^ [1]
   destructuring_init.js:31:13
   31| var l = (x: string) => 1;
                   ^^^^^^ [2]
   destructuring_init.js:31:5
   31| var l = (x: string) => 1;
           ^ [3]


Error --------------------------------------------------------------------------------------- destructuring_init.js:33:9

Cannot assign `[...][1][1]` to `m` because parameter `x` of unknown type [1] is incompatible with string [2] (consider
adding a type annotation to `x` [1]) in the first parameter. All writes to `m` must be compatible with the type of its
initializer [3]. Add an annotation to `m` [3] if a different type is desired. [incompatible-type]

   destructuring_init.js:33:9
   33| [k, [l, m]] = [(x) => 1, [(x) => 1, (x) => 1]]; // okay
               ^

References:
   destructuring_init.js:33:38
   33| [k, [l, m]] = [(x) => 1, [(x) => 1, (x) => 1]]; // okay
                                            ^ [1]
   destructuring_init.js:32:13
   32| var m = (x: string) => 1;
                   ^^^^^^ [2]
   destructuring_init.js:32:5
   32| var m = (x: string) => 1;
           ^ [3]


Error --------------------------------------------------------------------------------------- destructuring_init.js:38:2

Cannot assign `[...][0]` to `n` because parameter `x` of unknown type [1] is incompatible with string [2] (consider
adding a type annotation to `x` [1]) in the first parameter. All writes to `n` must be compatible with the type of its
initializer [3]. Add an annotation to `n` [3] if a different type is desired. [incompatible-type]

   destructuring_init.js:38:2
   38| [n, [o, null_2]] = [
        ^

References:
   destructuring_init.js:39:6
   39|     (x) => 1, // TODO should not need annotation
            ^ [1]
   destructuring_init.js:35:13
   35| var n = (x: string) => 1;
                   ^^^^^^ [2]
   destructuring_init.js:35:5
   35| var n = (x: string) => 1;
           ^ [3]


Error --------------------------------------------------------------------------------------- destructuring_init.js:38:6

Cannot assign `[...][1][0]` to `o` because parameter `x` of unknown type [1] is incompatible with string [2] (consider
adding a type annotation to `x` [1]) in the first parameter. All writes to `o` must be compatible with the type of its
initializer [3]. Add an annotation to `o` [3] if a different type is desired. [incompatible-type]

   destructuring_init.js:38:6
   38| [n, [o, null_2]] = [
            ^

References:
   destructuring_init.js:41:10
   41|         (x) => 1, // TODO should not need annotation
                ^ [1]
   destructuring_init.js:36:13
   36| var o = (x: string) => 1;
                   ^^^^^^ [2]
   destructuring_init.js:36:5
   36| var o = (x: string) => 1;
           ^ [3]


Error --------------------------------------------------------------------------------------- destructuring_init.js:39:6

Missing an annotation on `x`. [missing-local-annot]

   39|     (x) => 1, // TODO should not need annotation
            ^


Error -------------------------------------------------------------------------------------- destructuring_init.js:41:10

Missing an annotation on `x`. [missing-local-annot]

   41|         (x) => 1, // TODO should not need annotation
                ^


Error -------------------------------------------------------------------------------------- destructuring_init.js:42:10

Missing an annotation on `x`. [missing-local-annot]

   42|         (x) => 1, // error needs annotation because null_2 pattern is a provider
                ^


Error ------------------------------------------------------------------------------------------------- do_while.js:8:16

Missing an annotation on `y`. [missing-local-annot]

   8|     const x = (y) => 3; // non-return, not covered!
                     ^


Error ------------------------------------------------------------------------------------------------ do_while.js:11:11

Missing an annotation on `x`. [missing-local-annot]

   11|   while ((x) => 3); // guard is not covered!
                 ^


Error ------------------------------------------------------------------------------------------------- do_while.js:12:3

Unreachable code. [unreachable-code]

   12|   return (y) => 3;
         ^^^^^^^^^^^^^^^^


Error ------------------------------------------------------------------------------------------------------- for.js:7:9

Missing an annotation on `x`. [missing-local-annot]

   7|   for ((x) => true; (x) => true; 1) { // init, and test are all not covered by the annot
              ^


Error ------------------------------------------------------------------------------------------------------ for.js:7:22

Missing an annotation on `x`. [missing-local-annot]

   7|   for ((x) => true; (x) => true; 1) { // init, and test are all not covered by the annot
                           ^


Error ------------------------------------------------------------------------------------------------------ for.js:8:16

Missing an annotation on `y`. [missing-local-annot]

   8|     const x = (y) => 3; // non-return, not covered!
                     ^


Error ----------------------------------------------------------------------------------------------------- for.js:14:10

Missing an annotation on `x`. [missing-local-annot]

   14| for (;; (x) => true) {} // update is not covered by the annot
                ^


Error --------------------------------------------------------------------------------------------------- for_in.js:7:19

Missing an annotation on `x`. [missing-local-annot]

   7|   for (let x in ((x) => 3)) { // Only the body is covered, missing annot!
                        ^


Error --------------------------------------------------------------------------------------------------- for_in.js:8:16

Missing an annotation on `y`. [missing-local-annot]

   8|     const x = (y) => 3; // non-return, not covered!
                     ^


Error --------------------------------------------------------------------------------------------------- for_of.js:7:18

Property `@@iterator` is missing in function [1] but exists in `$Iterable` [2]. [prop-missing]

   for_of.js:7:18
      7|   for (let x of ((x) => 3)) { // Only the body is covered, missing annot! Also a type error
                          ^^^^^^^^ [1]

References:
   <BUILTINS>/core.js:1679:11
   1679| interface $Iterable<+Yield,+Return,-Next> {
                   ^^^^^^^^^ [2]


Error --------------------------------------------------------------------------------------------------- for_of.js:7:19

Missing an annotation on `x`. [missing-local-annot]

   7|   for (let x of ((x) => 3)) { // Only the body is covered, missing annot! Also a type error
                        ^


Error --------------------------------------------------------------------------------------------------- for_of.js:8:16

Missing an annotation on `y`. [missing-local-annot]

   8|     const x = (y) => 3; // non-return, not covered!
                     ^


Error --------------------------------------------------------------------------------------------------- freeze.js:3:35

Missing an annotation on `x`. [missing-local-annot]

   3| const noHint = Object.freeze({ f: x => {}}); // error
                                        ^


Error ----------------------------------------------------------------------------------------- function_statics.js:4:12

Missing an annotation on `baz`. [missing-local-annot]

   4| foo.bar = (baz) => {}; // Error: function statics assignments do not have hints.
                 ^^^


Error -------------------------------------------------------------------------------------------------- id_init.js:6:15

Missing an annotation on `x`. [missing-local-annot]

   6|   const b = ((x) => 3)(3); // This x does not
                    ^


Error -------------------------------------------------------------------------------------------------- id_init.js:7:14

Missing an annotation on `x`. [missing-local-annot]

   7|   const c = (x) => 3; // Neither does this one
                   ^


Error -------------------------------------------------------------------------------------------------------- if.js:7:9

Missing an annotation on `x`. [missing-local-annot]

   7|   if (((x) => true) ()){ // Guards are not covered by the annot
              ^


Error ------------------------------------------------------------------------------------------------------ if.js:10:16

Missing an annotation on `x`. [missing-local-annot]

   10|     const z = (x) => 3; // Non-return statements are not covered by the annot
                      ^


Error -------------------------------------------------------------------------------- immediate_call_expression.js:8:13

Missing an annotation on `x`. [missing-local-annot]

   8|     return (x) => {}; // error missing annotation
                  ^


Error ------------------------------------------------------------------------------------------------------ jsx.js:9:14

Missing an annotation on `x`. [missing-local-annot]

   9|   const y = (x) => 3; // error, required annot
                   ^


Error ------------------------------------------------------------------------------------------------- logical.js:15:37

Missing an annotation on `y`. [missing-local-annot]

   15| const and = ((x: number) => {}) && (y => {}); // Error `y` missing annotation
                                           ^


Error ------------------------------------------------------------------------------------------------ no_annots.js:3:12

Missing an annotation on `x`. [missing-local-annot]

   3| function f(x): void {}
                 ^


Error ------------------------------------------------------------------------------------------------ no_annots.js:4:32

Missing an annotation on `x`. [missing-local-annot]

   4| const function_expr = function(x): void {};
                                     ^


Error ------------------------------------------------------------------------------------------------ no_annots.js:5:21

Missing an annotation on `x`. [missing-local-annot]

   5| const arrow_expr = (x) => {};
                          ^


Error ------------------------------------------------------------------------------------------------ no_annots.js:6:49

Missing an annotation on `x`. [missing-local-annot]

   6| const deep_function_expr = {f: {g: {h: function(x): void {}}}};
                                                      ^


Error ------------------------------------------------------------------------------------------------ no_annots.js:7:38

Missing an annotation on `x`. [missing-local-annot]

   7| const deep_arrow_expr = {f: {g: {h: (x) => void {}}}};
                                           ^


Error --------------------------------------------------------------------------------------------------- object.js:5:16

Missing an annotation on `x`. [missing-local-annot]

   5|     const a = (x) => 3; // Missing annot
                     ^


Error --------------------------------------------------------------------------------------------------- object.js:9:16

Missing an annotation on `x`. [missing-local-annot]

   9|     const b = (x) => 3; // Missing annot
                     ^


Error -------------------------------------------------------------------------------------------------- object.js:16:15

Missing an annotation on `x`. [missing-local-annot]

   16|   __proto__: (x) => {
                     ^


Error -------------------------------------------------------------------------------------------------- object.js:17:16

Missing an annotation on `x`. [missing-local-annot]

   17|     const c = (x) => 3; // Missing annot
                      ^


Error -------------------------------------------------------------------------------------------------- object.js:18:13

Missing an annotation on `x`. [missing-local-annot]

   18|     return (x) => 3;
                   ^


Error -------------------------------------------------------------------------------------------------- object.js:21:16

Missing an annotation on `x`. [missing-local-annot]

   21|     const d = (x) => 3; // Missing annot
                      ^


Error -------------------------------------------------------------------------------------------------- object.js:26:16

Missing an annotation on `x`. [missing-local-annot]

   26|     const e = (x) => 3; // Missing annot
                      ^


Error -------------------------------------------------------------------------------------------------- object.js:30:16

Missing an annotation on `x`. [missing-local-annot]

   30|     const f = (x) => 3; // Missing annot
                      ^


Error -------------------------------------------------------------------------------------------------- object.js:34:16

Missing an annotation on `x`. [missing-local-annot]

   34|     const g = (x) => 3; // Missing annot
                      ^


Error -------------------------------------------------------------------------------------------------- object.js:38:16

Missing an annotation on `x`. [missing-local-annot]

   38|     const h = (x) => 3; // Missing annot
                      ^


Error -------------------------------------------------------------------------------------------- object_static.js:3:21

Missing an annotation on `x`. [missing-local-annot]

   3| Object.create({ foo(x) {} });  // error missing annotation
                          ^


Error --------------------------------------------------------------------------------------------------- return.js:7:22

Missing an annotation on `z`. [missing-local-annot]

   7| let b = ((x => y => (z => 3)(3)): number => number => number); // annot missing on z
                           ^


Error -------------------------------------------------------------------------------------------------- return.js:11:40

Missing an annotation on `z`. [missing-local-annot]

   11| let d = ((x => { return y => { return (z => 3)(3) }}): number => number => number); // annot missing on z
                                              ^


Error -------------------------------------------------------------------------------------------------- return.js:15:15

Missing an annotation on `x`. [missing-local-annot]

   15|   const xx = (x) => 3; // Missing annot on x
                     ^


Error -------------------------------------------------------------------------------------------------- return.js:17:16

Missing an annotation on `x`. [missing-local-annot]

   17|     const z = (x) => 3; // Missing annot on x
                      ^


Error --------------------------------------------------------------------------------------------------- switch.js:7:12

Missing an annotation on `x`. [missing-local-annot]

   7|   switch ((x) => true){ // Guards are not covered by the annot
                 ^


Error -------------------------------------------------------------------------------------------------- switch.js:11:18

Missing an annotation on `x`. [missing-local-annot]

   11|       const z = (x) => 3; // Non-return statements are not covered by the annot
                        ^


Error ----------------------------------------------------------------------------------------------------- this.js:2:13

Missing an annotation on implicit `this` parameter of function. [missing-this-annot]

   2| function foo() {return this.x;}
                  ^^


Error ----------------------------------------------------------------------------------------------------- this.js:7:10

Missing an annotation on return. [missing-local-annot]

   7|     foo() {return this.x;} // Error: missing return annot
               


Error ----------------------------------------------------------------------------------------------------- this.js:8:17

Missing an annotation on return. [missing-local-annot]

   8|     static bar() {return this.y;} // Error: missing return annot
                      


Error ---------------------------------------------------------------------------------------------------- this.js:18:18

Missing an annotation on implicit `this` parameter of function. [missing-this-annot]

   18| let f = function () { return this.x }
                        ^^


Error ---------------------------------------------------------------------------------------- try_catch_finally.js:8:16

Missing an annotation on `x`. [missing-local-annot]

   8|     const z = (x) => 3; // Non-return statements are not covered by the annot
                     ^


Error --------------------------------------------------------------------------------------- try_catch_finally.js:11:16

Missing an annotation on `x`. [missing-local-annot]

   11|     const z = (x) => 3; // Non-return statements are not covered by the annot
                      ^


Error --------------------------------------------------------------------------------------- try_catch_finally.js:14:16

Missing an annotation on `x`. [missing-local-annot]

   14|     const z = (x) => 3; // Non-return statements are not covered by the annot
                      ^


Error ---------------------------------------------------------------------------------------------------- while.js:7:11

Missing an annotation on `x`. [missing-local-annot]

   7|   while ((x) => 3) { // Only the body is covered, missing annot!
                ^


Error ---------------------------------------------------------------------------------------------------- while.js:8:16

Missing an annotation on `y`. [missing-local-annot]

   8|     const x = (y) => 3; // non-return, not covered!
                     ^



Found 101 errors
